refactor: Clean up Image